# orpheus

./: .gitignore  OrpheusArchitecture.apollon  README.md  architecture.apollon  docker-compose.yaml
api/: README.md  (+9 more)
avatar/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  service_video_v1.yaml
avatar/OpenVoice/: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.local  Dockerfile_api  Dockerfile_local  audio_config.json  demo_part3.ipynb  generate_audio_function.py  setup.py  tempCodeRunnerFile.py  tts.py
avatar/OpenVoice/openvoice/: api.py  attentions.py  models.py  modules.py  openvoice_app.py  se_extractor.py  utils.py
avatar/OpenVoice/openvoice/text/: __init__.py  cleaners.py
avatar/assets/: Dockerfile  README.md
avatar/assets/nginx/: assets.conf
avatar/ditto-talkinghead/: .dockerignore  .gitignore  Dockerfile  Dockerfile_api  avatar_server.py  fast_api_wrapper_for_ditto_inference.py  inference.py  stream_pipeline_offline.py  stream_pipeline_online.py
avatar/ditto-talkinghead/core/atomic_components/: audio2motion.py  cfg.py  condition_handler.py  decode_f3d.py  loader.py  motion_stitch.py  putback.py  source2info.py  warp_f3d.py  wav2feat.py  writer.py
avatar/ditto-talkinghead/core/aux_models/: blaze_face.py  insightface_det.py  insightface_landmark106.py  landmark203.py  mediapipe_landmark478.py
avatar/ditto-talkinghead/core/aux_models/modules/: __init__.py  landmark106.py  landmark203.py  landmark478.py  retinaface.py
avatar/ditto-talkinghead/core/models/: appearance_extractor.py  decoder.py  lmdm.py  motion_extractor.py  stitch_network.py  warp_network.py
avatar/ditto-talkinghead/core/models/modules/: LMDM.py  __init__.py  appearance_feature_extractor.py  convnextv2.py  dense_motion.py  motion_extractor.py  spade_generator.py  util.py  warping_network.py
avatar/ditto-talkinghead/core/utils/: crop.py  eye_info.py  tensorrt_utils.py
avatar/ditto-talkinghead/core/utils/blend/: __init__.py
avatar/ditto-talkinghead/debug/: .gitignore
avatar/ditto-talkinghead/scripts/: cvt_onnx_to_trt.py
avatar/infra/: docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.remote.yml  docker-compose.yml
avatar/test/: test_aud_gen.py  test_vid_gen.py
core/: .gitignore  .openapi-generator-ignore  Dockerfile  README.md  docker-compose.yaml  openapi.yaml  pyproject.toml  service_core_v1.yaml  setup.cfg
core/.openapi-generator/: FILES
core/app/: main.py
core/docker_template/: Dockerfile.mustache  docker-compose.mustache
core/src/: main.py
core/src/models/: generation_status.py  prompt_request.py  prompt_response.py  slide_response.py  video_response.py
core/src/service_core/: README.md  __init__.py  app_state.py  main.py  security_api.py
core/src/service_core/apis/: core_api.py  core_api_base.py
core/src/service_core/impl/: core_api_impl.py  status.py  step_status.py  tracker.py
core/src/service_core/models/: __init__.py  data_response.py  error.py  prompt_request.py  prompt_response.py  user_profile.py  user_profile_preferences.py
core/src/service_core/services/: client_handler.py  decompose_input.py  fetch_mock_data.py  generate_lectue_content.py  generate_lecture_content.py  generate_voice_track_text.py  handle_retrieved.py  mock_data_models.py  mocktest_script.py  narration_generation.py  script_generation.py  user_summary.py  voice_text_generation.py
core/src/service_core/services/helpers/: debug.py  handle_retrieved.py  llm.py  loaders.py
core/src/service_core/services/prompts/: narration.json
core/src/service_core/services/services_models/: slides.py  voice_track.py
core/src/service_status/: __init__.py
core/src/service_status/apis/: status_api.py
core/src/service_status/impl/: status_api_impl.py
core/src/service_status/impl/manager/: status_manager.py
core/src/service_status/models/: status_patch.py
core/src/services/: decompose_input.py  transcript_demo.py  voice_text_generation.py
document-intelligence/: .gitignore  Dockerfile  README.md  docker-compose.yml  extractText.py  pyproject.toml  service_document-intelligence_v1.yaml
document-intelligence/src/docint_app/: main.py
document-intelligence/src/docint_app/api/: routes.py
document-intelligence/src/docint_app/apis/: docint_api.py  docint_api_base.py
document-intelligence/src/docint_app/impl/: docint_api_impl.py
document-intelligence/src/docint_app/models/: image_object.py  retrieval_response.py  upload_response.py
document-intelligence/src/docint_app/services/: describe_images_service.py  embedding_service.py  extract_text_service.py  ingestion_service.py  mock_retrieve_data_for_generation_service.py  mock_upload_pdf_service.py  pdf_image_extractor_service.py  pdf_upload_service.py  retrieval_service.py  retrieve_data_for_generation_service.py
document-intelligence/src/docint_app/utils/: describe_images.py  pdf_image_extractor.py
document-intelligence/src/docint_app/vectorstore/: weaviate_graph_store.py
slides/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  service_slide_postprocessing_v1.yaml  service_slides_generation_v1.yaml  service_slides_v1.yaml
slides/app/: main.py
slides/delivery/: Dockerfile  README.md  slidev_nginx.conf
slides/postprocessing/: .env.example  Dockerfile  README.md  example.md  pyproject.toml
slides/postprocessing/src/service_slides_postprocessing/: main.py
slides/postprocessing/src/service_slides_postprocessing/apis/: postprocessing_api.py  postprocessing_api_base.py
slides/postprocessing/themes/: slidev-theme-tum.tgz
slides/src/service_slides/: __init__.py  main.py
slides/src/service_slides/apis/: slides_api.py  slides_api_base.py
slides/src/service_slides/clients/: configurations.py
slides/src/service_slides/impl/: slides_api_impl.py  status_helper.py
slides/src/service_slides/llm_chain/: shared_llm.py  slide_splitting.py
slides/src/service_slides/models/: error.py  generation_accepted_response.py  generation_status_response.py  request_slide_generation_request.py  request_slide_generation_request_assets_inner.py  slide_item.py  slide_structure.py
(+213 files in other folders)
