[tool.poetry]
name = "avatar-service"
version = "0.1.0"
description = "Service for creating lecturer avatar audio and video."
authors = ["Orpheus Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.117.1"
uvicorn = { extras = ["standard"], version = ">=0.36.0,<0.37.0" }
pydantic = ">=2.7.0,<3.0.0"
sqlalchemy = ">=2.0.0,<3.0.0"
python-multipart = ">=0.0.9,<0.1.0"
typing-extensions = ">=4.12.0,<5.0.0"
requests = ">=2.32.0,<3.0.0"
httpx = ">=0.27.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.13.1"
mypy = "1.18.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
