[project]
name = "service-core"
version = "0.1.0"
description = "Orpheus Core AI Services"
authors = [
    {name = "Rifaath Ameen"},
    {name = "Apoorva M Vaidya"},
    {name = "Eslam Nasrallah"},
    {name = "Lukas Bäurle"},
    {name = "Florian Glombik"},
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (==0.117.1)",
    "langchain (==1.0.0a6)",
    "uvicorn[standard] (>=0.36.0,<0.37.0)",
    "openapi-generator (>=1.0.6,<2.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "boto3 (>=1.40.39,<2.0.0)"
]

[dependency-groups]
dev = [
    "ruff (==0.13.1)",
    "mypy (==1.18.1)",
    "datamodel-code-generator (>=0.33.0,<0.34.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.poetry]
name = "service-core"
version = "0.1.0"
description = "Orpheus Core AI Services"
authors = ["RA"]
readme = "README.md"
packages = [{include = "service_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.117.1"
langchain = "1.0.0a6"
httpx = "^0.27.0" # Example version

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
