[metadata]
name = service_core
version = 0.1.0
description = API for the Orpheus core orchestration. From the repository: \&quot;The Orpheus System transforms static slides into interactive prompt videos with lifelike professor avatars, combining expressive narration, visual presence, and dynamic content to create engaging, personalized learning experiences.\&quot; License: MIT (see repository). 
long_description = file: README.md
keywords = OpenAPI Orpheus CoreAI-Service API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
