[project]
name = "docint"
version = "0.1.0"
description = "Barebones AI FastAPI project"
authors = [
    {name = "Raj Vasani"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (==0.117.1)",
    "langchain (==1.0.0a6)",
    "uvicorn[standard] (>=0.36.0,<0.37.0)",
    "requests >=2.32.0,<3.0.0",
    "python-multipart >=0.0.9,<0.1.0",
    "pydantic-settings >=2.4.0,<3.0.0",
    "orjson >=3.10.0,<4.0.0",
    "weaviate-client >=4.6.0,<5.0.0",
]

[dependency-groups]
dev = [
    "ruff (==0.13.1)",
    "mypy (==1.18.1)",
    "openapi-generator-cli (>=7.15.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
