[tool.poetry]
name = "docint"
version = "0.1.0"
description = "Barebones AI FastAPI project"
authors = ["Raj Vasani"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4"
fastapi = "0.117.1"
langchain = "1.0.0a6"
uvicorn = { extras = ["standard"], version = ">=0.36.0,<0.37.0" }
ollama = ">=0.6.0,<0.7.0"
pdf2image = ">=1.17.0,<2.0.0"
requests = ">=2.32.0,<3.0.0"
python-multipart = ">=0.0.9,<0.1.0"
pydantic-settings = ">=2.4.0,<3.0.0"
orjson = ">=3.10.0,<4.0.0"
httpx = ">=0.28.0,<1.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pillow = ">=11.3.0,<12.0.0"
pymupdf = ">=1.26.4,<2.0.0"
weaviate-client = ">=4.16.10,<5.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.13.1"
mypy = "1.18.1"
openapi-generator-cli = ">=7.15.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["src/docint_app/apis", "src/docint_app/models"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
