[tool.poetry]
name = "service-slides"
version = "0.1.0"
description = "Orpheus Slide Service (FastAPI)"
authors = [
    "Timo Seyfarth",
    "Dominik Remo",
    "Kilian Krampf",
]
readme = "README.md"
packages = [{ include = "service_slides", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.117.1"
langchain = "1.0.0a6"
langchain-ollama = "0.3.8"
langchain-openai = ">=0.3.0,<1.0.0"
langchain-google-genai = ">=2.1.12,<3.0.0"
langchain-aws = "0.2.33"
uvicorn = { extras = ["standard"], version = ">=0.36.0,<0.37.0" }
python-dateutil = ">=2.9.0.post0,<3.0.0"
types-python-dateutil = ">=2.9.0.20250822,<3.0.0.0"
aiohttp = ">=3.12.15,<4.0.0"
aiohttp-retry = ">=2.9.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.13.1"
mypy = "1.18.1"

[build-system]
requires = ["poetry-core>=2.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
